--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Roblox</title>
+    <title>Tudo sobre Roblox</title>
 </head>
 <body>
     <div id="interface">
@@ -69,7 +69,8 @@
 
 
 
-copyrigth Arthur Henrique Schlikmann&copy;
+por Arthur Henrique Schlikmann&copy;
+fonte: Roblox
 </div>
 </body>
 </html>
