--- a/site/index.html
+++ b/site/index.html
@@ -17,9 +17,10 @@
     <h2>Como Criar Sua Experiencia Roblox?</h2>
 <p>para criar sua experiencia Roblox, voce precisa do Roblox Studio.</p>
 <h3>Como Usar Roblox Studio?</h3>
+<p>No Roblox Studio aberto, clique em criar nova experiencia, apos criar sua experiencia clique em arquivo e em publi&shy;car no Roblox.</p>
+Pronto sua experiencia está pronta
 
-
-
+<img src="C:\Users\Win10\1\site-vinicius\OIP (1).jpg">
 
 
 
