--- a/site/index.html
+++ b/site/index.html
@@ -18,9 +18,9 @@
 <p>para criar sua experiencia Roblox, voce precisa do Roblox Studio.</p>
 <h3>Como Usar Roblox Studio?</h3>
 <p>No Roblox Studio aberto, clique em criar nova experiencia, apos criar sua experiencia clique em arquivo e em publi&shy;car no Roblox.</p>
-Pronto sua experiencia está pronta
+Pronto sua experiencia está pronta.<br>
 
-<img src="C:\Users\Win10\1\site-vinicius\OIP (1).jpg">
+<img src="C:\Users\Win10\1\site-vinicius\OIP (1).jpg"><br>
 
 
 
