--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
     <h2>Oque é Roblox?</h2>
     Roblox é uma pltaforma para jogar experiencias com seus amigos. Podendo criar sua propria expe&shy;perien&shy;cias
     <h2>Como Criar Sua Experiencia Roblox?</h2>
-<p>para criar sua experiencia Roblox, voce precisa do Roblox Studio.</p>
+<p>para criar sua experiencia Roblox, voce precisa do Roblox Studio.(somente computador)</p>
 <h3>Como Usar Roblox Studio?</h3>
 <p>No Roblox Studio aberto, clique em criar nova experiencia, apos criar sua experiencia clique em arquivo e em publi&shy;car no Roblox.</p>
 Pronto sua experiencia está pronta.<br>
