--- a/site/index.html
+++ b/site/index.html
@@ -22,8 +22,11 @@ Pronto sua experiencia está pronta.<br>
 
 <img src="C:\Users\Win10\1\site-vinicius\OIP (1).jpg"><br>
 
-
-
+<h1>Mas Para Jogar Roblox?</h1>
+<br>
+<h2>Como Jogar no Roblox</h2>
+<p>Para jogar no Roblox você precisa do app do Roblox.</p>
+<h6>1 crie sua conta ou faça logon</h6>
 
 
 
