--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,10 @@ Pronto sua experiencia está pronta.<br>
 <br>
 <h2>Como Jogar no Roblox</h2>
 <p>Para jogar no Roblox você precisa do app do Roblox.</p>
-<h6>1 crie sua conta ou faça logon</h6>
+<h6>1. crie sua conta ou faça logon</h6>
+<h6>2. escolha a experiencia desejada</h6>
+<h6>3. Pronto se divirta!!!!</h6>
+<h2>mas, para trocar de experiencia?</h2>
 
 
 
@@ -73,8 +76,8 @@ Pronto sua experiencia está pronta.<br>
 
 
 
-por Arthur Henrique Schlikmann&copy;
-fonte: Roblox
+por Arthur Henrique Schlikmann&copy;<br>
+fonte: Roblox&copy;
 </div>
 </body>
 </html>
