--- a/site/index.html
+++ b/site/index.html
@@ -30,43 +30,10 @@ Pronto sua experiencia está pronta.<br>
 <h6>2. escolha a experiencia desejada</h6>
 <h6>3. Pronto se divirta!!!!</h6>
 <h2>mas, para trocar de experiencia?</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p>para trocar de experiencia fique ligado.</p>
+<h6>1.clique no icone da Roblox.</h6>
+<h6>2.clique em sair.</h6>
+<h6>3.confirme que quer sair</h6>
 
 
 
@@ -77,7 +44,8 @@ Pronto sua experiencia está pronta.<br>
 
 
 por Arthur Henrique Schlikmann&copy;<br>
-fonte: Roblox&copy;
+fonte: Roblox&copy;<br>
+bit.ly/gibisdoarthur&copy;
 </div>
 </body>
 </html>
