--- a/roblox-studio.html
+++ b/roblox-studio.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Como Usar Roblox Studio</h1>
-    
+    <p>Você quer criar sua propria experiencia Roblox?</p>
 </body>
 </html>
