--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>No Roblox Studio aberto, clique em criar nova experiencia, apos criar sua experiencia clique em arquivo e em publi&shy;car no Roblox.</p>
 Pronto sua experiencia está pronta.<br>
 
-<img src="C:\Users\Win10\1\site-vinicius\OIP (1).jpg"><br>
+<img src="docs/OIP.jpg"><br>
 
 <h1>Mas Para Jogar Roblox?</h1>
 <br>
