--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Tudo sobre Roblox</title>
+    <style>
+        p {
+
+            
+        }
+
+
+    </style>
 </head>
 <body>
     <div id="interface">
