--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Roblox</title>
     <style>
-        p {
+        body {
+            background-color: ;
+            color: ;
 
-            
         }
+        p{
+            text-align: justify;
+            text-indent: 50px;
 
+        }
 
     </style>
 </head>
