--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Tudo sobre Roblox</title>
     <style>
         body {
-            background-color: ;
-            color: ;
+            background-color: #e4ee90;
+            color: #2b2323;
 
         }
         p{
