--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <hgroup>  
      <h1>Roblox</h1>
-     <img src="C:\Users\Win10\1\site-vinicius\OIP.jpg">
+     <img src="docs/OIP (1).jpg">
     </hgroup> 
     </header>
     <h2>Oque é Roblox?</h2>
